refactor: format code, modify config

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -33,16 +33,20 @@
         ]
       }
     ],
-    "requestPermissions":[
+    "requestPermissions": [
       {
-        "name" : "ohos.permission.DISTRIBUTED_DATASYNC",
+        "name": "ohos.permission.DISTRIBUTED_DATASYNC",
         "reason": "$string:permission_reason",
         "usedScene": {
           "abilities": [
             "EntryAbility"
           ],
-          "when":"always"
+          "when": "always"
         }
-      }]
+      },
+      {
+        "name": "ohos.permission.DISTRIBUTED_SOFTBUS_CENTER"
+      }
+    ]
   }
 }
